# rpm-mandriva-setup

./: ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  configure  configure.ac  drop-ld-no-undefined-for-shared-lib-modules-in-libtool  filter.sh  find-provides.in  find-provides.perl.in  find-requires.in  fix-dlsearch-path-in-libtool-for-multilib  fix-libtool-from-moving-options-after-libs  fix-libtool-ltmain-from-overlinking  force-as-needed-for-shared-lib-in-libtool  macros-perarch.in  make_arch_macrosfiles.sh.in  perl.prov  perl.req  perl.req-from-meta  php.prov  php.req  rpm-mandriva-setup.spec  rpm-spec-mode.el  rpmgenplatform.in  rpmrc.in
